# lygiagretieji_nd_3_1

./: CMakeLists.txt  README.md  banker.h  banker_mock.h  generate_state.h  kitas_main.cpp  main.cpp  senas_main.cpp  timeout.h
legacy/: main_random_lock.cpp
